apps/gcp/jenkins/beta/post/_base/policies/tests/set-pod-compute-class/patched-default-non-release.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-non-release
  namespace: jenkins-pd
  labels:
    kubernetes.jenkins.io/controller: ""
  annotations:
    ci_refs: '{"org":"pingcap","repo":"tidb","base_ref":"master"}'
    cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
spec:
  containers:
    - name: main
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
  nodeSelector:
    cloud.google.com/compute-class: ci-worker
