apps/gcp/jenkins/beta/post/_base/policies/tests/set-pod-compute-class/patched-special-job.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-special-job
  namespace: jenkins-pd
  labels:
    kubernetes.jenkins.io/controller: ""
  annotations:
    ci_job: pingcap/tidb/pull_unit_test_1234
    cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
spec:
  containers:
    - name: main
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
  nodeSelector:
    cloud.google.com/compute-class: ci-worker-ondemand
