apps/gcp/jenkins/beta/post/_base/policies/tests/set-pod-compute-class/resource-empty-ci-refs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-empty-ci-refs
  namespace: jenkins-pd
  labels:
    kubernetes.jenkins.io/controller: ""
  annotations:
    ci_refs: ""
spec:
  containers:
    - name: main
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
