apps/gcp/jenkins/beta/post/_base/policies/tests/set-pod-compute-class/resource-release.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-release
  namespace: jenkins-pd
  labels:
    jenkins/jenkins-jenkins-agent: "true"
  annotations:
    ci_refs: '{"org":"pingcap","repo":"tidb","base_ref":"release-8.5-20260301-v8.5.6"}'
spec:
  containers:
    - name: main
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
