apps/gcp/jenkins/beta/post/_base/policies/tests/set-pod-compute-class/resource-retry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-retry
  namespace: jenkins-pd
  labels:
    kubernetes.jenkins.io/controller: ""
    kubernetes.jenkins.io/retry: "true"
spec:
  containers:
    - name: main
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
