apps/gcp/jenkins/beta/post/_base/policies/tests/set-pod-compute-class/resource-special-job.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-special-job
  namespace: jenkins-pd
  labels:
    kubernetes.jenkins.io/controller: ""
  annotations:
    ci_job: pingcap/tidb/pull_unit_test_1234
spec:
  containers:
    - name: main
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
