apps/gcp/jenkins/beta/post/_base/policies/tests/set-pod-compute-class/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: set-pod-compute-class
policies:
  - ../../set-pod-compute-class.yaml
resources:
  - resource-no-ci-refs.yaml
  - resource-empty-ci-refs.yaml
  - resource-non-release.yaml
  - resource-release.yaml
  - resource-retry.yaml
  - resource-special-job.yaml
results:
  - policy: set-pod-compute-class
    rule: add-compute-class-and-annotations
    resources:
      - pod-no-ci-refs
    kind: Pod
    result: pass

  - policy: set-pod-compute-class
    rule: override-compute-class-for-hotfix-branches
    resources:
      - pod-no-ci-refs
    kind: Pod
    result: skip
    patchedResources: patched-default.yaml

  - policy: set-pod-compute-class
    rule: add-compute-class-and-annotations
    resources:
      - pod-empty-ci-refs
    kind: Pod
    result: pass

  - policy: set-pod-compute-class
    rule: override-compute-class-for-hotfix-branches
    resources:
      - pod-empty-ci-refs
    kind: Pod
    result: skip
    patchedResources: patched-default-empty-ci-refs.yaml

  - policy: set-pod-compute-class
    rule: add-compute-class-and-annotations
    resources:
      - pod-non-release
    kind: Pod
    result: pass

  - policy: set-pod-compute-class
    rule: override-compute-class-for-hotfix-branches
    resources:
      - pod-non-release
    kind: Pod
    result: skip
    patchedResources: patched-default-non-release.yaml

  - policy: set-pod-compute-class
    rule: add-compute-class-and-annotations
    resources:
      - pod-release
    kind: Pod
    result: pass

  - policy: set-pod-compute-class
    rule: override-compute-class-for-hotfix-branches
    resources:
      - pod-release
    kind: Pod
    result: pass
    patchedResources: patched-release.yaml

  - policy: set-pod-compute-class
    rule: add-compute-class-and-annotations
    resources:
      - pod-retry
    kind: Pod
    result: pass

  - policy: set-pod-compute-class
    rule: override-compute-class-retried
    resources:
      - pod-retry
    kind: Pod
    result: pass
    patchedResources: patched-retry.yaml

  - policy: set-pod-compute-class
    rule: add-compute-class-and-annotations
    resources:
      - pod-special-job
    kind: Pod
    result: pass

  - policy: set-pod-compute-class
    rule: override-compute-class-for-special-jenkins-jobs
    resources:
      - pod-special-job
    kind: Pod
    result: pass
    patchedResources: patched-special-job.yaml
